@@ -14,12 +14,15 @@ object.size(x)
   Exactly which parts of the memory allocation should be attributed to
   which object is not clear-cut.  This function merely provides a rough
   indication: it should be reasonably accurate for atomic vectors, but
-  does not detect if elements of a list are shared, for example. (As
-  from \R 2.0.0 sharing amongst elements of a character vector is taken
-  into account.)
+  does not detect if elements of a list are shared, for example.
+  (Sharing amongst elements of a character vector is taken into account.)
   
   The calculation is of the size of the object, and excludes the space
   needed to store its name in the symbol table.
+
+  Associated space (e.g. the enviromment of a function and what the
+  pointer in a \code{EXTPTRSXP} points to) is not included in the
+  calculation.
 
   Object sizes are larger on 64-bit platforms than 32-bit ones, but will
   very likely be the same on different platforms with the same word length.
@@ -34,7 +37,7 @@ object.size(x)
 \examples{
 object.size(letters)
 object.size(ls)
-## find the 10 largest objects in base
+## find the 10 largest objects in the base package
 z <- sapply(ls("package:base"), function(x) object.size(get(x, envir=NULL)))
 as.matrix(rev(sort(z))[1:10])
 }
